// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HierarchicalLocationsView /> displays a single location when complete 1`] = `
<DocumentFragment>
  <div>
    <div
      class="referencesContainer"
      data-testid="hierarchical-locations-view"
    >
      <div
        class="fileLocations fileLocations"
      >
        <div
          aria-live="polite"
          class="alert alertInfo mr-4 container"
          role="alert"
        >
          <span>
            Try out our 
            <button
              class="btn btnLink m-0 p-0 border-0 button"
              type="button"
            >
              brand new reference panel experience
            </button>
          </span>
          <button
            class="btn btnLink m-0 p-0 text-right button"
            type="button"
          >
            <svg
              class="mdi-icon "
              fill="currentColor"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </button>
        </div>
        <div>
          <div
            class="test-search-result resultContainer resultContainer"
            data-result-type="content"
            data-testid="result-container"
            role="none"
          >
            <div
              class="header"
            >
              <svg
                aria-label="content result"
                class="mdi-icon iconInline flex-shrink-0"
                fill="currentColor"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M13,9H18.5L13,3.5V9M6,2H14L20,8V20A2,2 0 0,1 18,22H6C4.89,22 4,21.1 4,20V4C4,2.89 4.89,2 6,2M15,18V16H6V18H15M18,14V12H6V14H18Z"
                />
              </svg>
              <div
                class="mx-1 headerDivider"
              />
              <svg
                aria-label="github.com"
                class="mdi-icon iconInline text-muted flex-shrink-0"
                data-tooltip="github.com"
                fill="currentColor"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                />
              </svg>
              <div
                class="headerTitle test-search-result-label"
                data-testid="result-container-header"
              >
                <div
                  class="ml-1 flex-shrink-past-contents text-truncate"
                >
                  <a
                    class="anchorLink"
                    href="/github.com/foo/bar"
                  >
                    foo/bar
                  </a>
                   › 
                  <a
                    class="anchorLink"
                    href="/github.com/foo/bar/-/blob/?subtree=true"
                  >
                    <strong />
                  </a>
                </div>
                <span
                  class="ml-2 headerDescription"
                />
              </div>
              <small>
                1 match
              </small>
            </div>
            <div
              class="fileMatchChildren"
              data-testid="file-match-children"
            >
              <div>
                <div
                  class="test-file-match-children-item-wrapper itemCodeWrapper"
                >
                  <div
                    class="test-file-match-children-item item itemClickable"
                    data-href="/github.com/foo/bar/-/blob/?L2:1&subtree=true"
                    data-testid="file-match-children-item"
                    role="link"
                    tabindex="0"
                  >
                    <code
                      class="code codeExcerpt"
                      data-testid="code-excerpt"
                    >
                      <table>
                        <tbody>
                          <tr>
                            <td
                              class="line"
                            >
                              1
                            </td>
                            <td
                              class="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="line"
                            >
                              2
                            </td>
                            <td
                              class="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="line"
                            >
                              3
                            </td>
                            <td
                              class="code"
                            >
                               
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </code>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<HierarchicalLocationsView /> displays multiple locations grouped by file 1`] = `
<DocumentFragment>
  <div>
    <div
      class="referencesContainer"
      data-testid="hierarchical-locations-view"
    >
      <div
        class="panel panelLeft panelRelative"
        style="width: 200px;"
      >
        <div
          class="handle handleLeft"
          role="presentation"
        />
        <div
          class="groupList"
          data-testid="hierarchical-locations-view-list"
        >
          <button
            class="list-group-item list-group-item-action locationButton active"
            data-testid="hierarchical-locations-view-button"
            type="button"
          >
            <span
              class="locationName"
              title="file1.txt"
            >
              <span
                class="locationNameText"
              >
                <span
                  class=""
                >
                   
                  <span>
                    file1.txt
                  </span>
                </span>
              </span>
            </span>
            <span
              class="locationBadge ml-1"
            >
              2
            </span>
          </button>
          <button
            class="list-group-item list-group-item-action locationButton"
            data-testid="hierarchical-locations-view-button"
            type="button"
          >
            <span
              class="locationName"
              title="file2.txt"
            >
              <span
                class="locationNameText"
              >
                <span
                  class=""
                >
                   
                  <span>
                    file2.txt
                  </span>
                </span>
              </span>
            </span>
            <span
              class="locationBadge ml-1"
            >
              3
            </span>
          </button>
        </div>
      </div>
      <div
        class="fileLocations fileLocations"
      >
        <div
          aria-live="polite"
          class="alert alertInfo mr-4 container"
          role="alert"
        >
          <span>
            Try out our 
            <button
              class="btn btnLink m-0 p-0 border-0 button"
              type="button"
            >
              brand new reference panel experience
            </button>
          </span>
          <button
            class="btn btnLink m-0 p-0 text-right button"
            type="button"
          >
            <svg
              class="mdi-icon "
              fill="currentColor"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </button>
        </div>
        <div>
          <div
            class="test-search-result resultContainer resultContainer"
            data-result-type="content"
            data-testid="result-container"
            role="none"
          >
            <div
              class="header"
            >
              <svg
                aria-label="content result"
                class="mdi-icon iconInline flex-shrink-0"
                fill="currentColor"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M13,9H18.5L13,3.5V9M6,2H14L20,8V20A2,2 0 0,1 18,22H6C4.89,22 4,21.1 4,20V4C4,2.89 4.89,2 6,2M15,18V16H6V18H15M18,14V12H6V14H18Z"
                />
              </svg>
              <div
                class="mx-1 headerDivider"
              />
              <svg
                aria-label="github.com"
                class="mdi-icon iconInline text-muted flex-shrink-0"
                data-tooltip="github.com"
                fill="currentColor"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                />
              </svg>
              <div
                class="headerTitle test-search-result-label"
                data-testid="result-container-header"
              >
                <div
                  class="ml-1 flex-shrink-past-contents text-truncate"
                >
                  <a
                    class="anchorLink"
                    href="/github.com/foo/bar"
                  >
                    foo/bar
                  </a>
                   › 
                  <a
                    class="anchorLink"
                    href="/github.com/foo/bar/-/blob/file1.txt?subtree=true"
                  >
                    <strong>
                      file1.txt
                    </strong>
                  </a>
                </div>
                <span
                  class="ml-2 headerDescription"
                />
              </div>
              <small>
                2 matches
              </small>
            </div>
            <div
              class="fileMatchChildren"
              data-testid="file-match-children"
            >
              <div>
                <div
                  class="test-file-match-children-item-wrapper itemCodeWrapper"
                >
                  <div
                    class="test-file-match-children-item item itemClickable"
                    data-href="/github.com/foo/bar/-/blob/file1.txt?L2:1&subtree=true"
                    data-testid="file-match-children-item"
                    role="link"
                    tabindex="0"
                  >
                    <code
                      class="code codeExcerpt"
                      data-testid="code-excerpt"
                    >
                      <table>
                        <tbody>
                          <tr>
                            <td
                              class="line"
                            >
                              1
                            </td>
                            <td
                              class="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="line"
                            >
                              2
                            </td>
                            <td
                              class="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="line"
                            >
                              3
                            </td>
                            <td
                              class="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="line"
                            >
                              4
                            </td>
                            <td
                              class="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="line"
                            >
                              5
                            </td>
                            <td
                              class="code"
                            >
                               
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </code>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<HierarchicalLocationsView /> displays partial locations before complete 1`] = `
<DocumentFragment>
  <div>
    <div
      class="referencesContainer"
      data-testid="hierarchical-locations-view"
    >
      <div
        class="fileLocations fileLocations"
      >
        <div
          aria-live="polite"
          class="alert alertInfo mr-4 container"
          role="alert"
        >
          <span>
            Try out our 
            <button
              class="btn btnLink m-0 p-0 border-0 button"
              type="button"
            >
              brand new reference panel experience
            </button>
          </span>
          <button
            class="btn btnLink m-0 p-0 text-right button"
            type="button"
          >
            <svg
              class="mdi-icon "
              fill="currentColor"
              height="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
              />
            </svg>
          </button>
        </div>
        <div>
          <div
            class="test-search-result resultContainer resultContainer"
            data-result-type="content"
            data-testid="result-container"
            role="none"
          >
            <div
              class="header"
            >
              <svg
                aria-label="content result"
                class="mdi-icon iconInline flex-shrink-0"
                fill="currentColor"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M13,9H18.5L13,3.5V9M6,2H14L20,8V20A2,2 0 0,1 18,22H6C4.89,22 4,21.1 4,20V4C4,2.89 4.89,2 6,2M15,18V16H6V18H15M18,14V12H6V14H18Z"
                />
              </svg>
              <div
                class="mx-1 headerDivider"
              />
              <svg
                aria-label="github.com"
                class="mdi-icon iconInline text-muted flex-shrink-0"
                data-tooltip="github.com"
                fill="currentColor"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
                />
              </svg>
              <div
                class="headerTitle test-search-result-label"
                data-testid="result-container-header"
              >
                <div
                  class="ml-1 flex-shrink-past-contents text-truncate"
                >
                  <a
                    class="anchorLink"
                    href="/github.com/foo/bar"
                  >
                    foo/bar
                  </a>
                   › 
                  <a
                    class="anchorLink"
                    href="/github.com/foo/bar/-/blob/?subtree=true"
                  >
                    <strong />
                  </a>
                </div>
                <span
                  class="ml-2 headerDescription"
                />
              </div>
              <small>
                1 match
              </small>
            </div>
            <div
              class="fileMatchChildren"
              data-testid="file-match-children"
            >
              <div>
                <div
                  class="test-file-match-children-item-wrapper itemCodeWrapper"
                >
                  <div
                    class="test-file-match-children-item item itemClickable"
                    data-href="/github.com/foo/bar/-/blob/?L2:1&subtree=true"
                    data-testid="file-match-children-item"
                    role="link"
                    tabindex="0"
                  >
                    <code
                      class="code codeExcerpt"
                      data-testid="code-excerpt"
                    >
                      <table>
                        <tbody>
                          <tr>
                            <td
                              class="line"
                            >
                              1
                            </td>
                            <td
                              class="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="line"
                            >
                              2
                            </td>
                            <td
                              class="code"
                            >
                               
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="line"
                            >
                              3
                            </td>
                            <td
                              class="code"
                            >
                               
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </code>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<HierarchicalLocationsView /> shows a spinner before any locations emissions 1`] = `
<DocumentFragment>
  <div
    class="iconInline loadingSpinner m-1 test-loading-spinner"
  />
</DocumentFragment>
`;

exports[`<HierarchicalLocationsView /> shows a spinner if locations emits empty and is not complete 1`] = `
<DocumentFragment>
  <div
    class="iconInline loadingSpinner m-1 test-loading-spinner"
  />
</DocumentFragment>
`;
